Wed May 16 07:49:43 GMT 2012  Olly Betts <olly@survex.com>

	* bin/questletor.cc,bin/xapian-letor-update.cc,letor.cc,
	  letor_internal.cc,letor_internal.h: Sort out standard @file and
	  @brief for all letor source files.

Wed May 16 06:06:17 GMT 2012  Olly Betts <olly@survex.com>

	* .gitignore: Update.

Wed May 16 05:59:33 GMT 2012  Olly Betts <olly@survex.com>

	* .gitignore,Makefile.am,bin/Makefile.mk,bin/questletor.cc,
	  examples/Makefile.mk,examples/questletor.cc: Move questletor from
	  examples/ to bin/ and hook xapian-letor-update into the build
	  system.

Wed May 16 05:52:28 GMT 2012  Olly Betts <olly@survex.com>

	* bin/xapian-letor-update.cc: Add new tool which updates the extra
	  stats xapian-letor needs, replacing the patch to omindex which was
	  on the gsoc2011-parth branch.

Wed May 16 05:51:43 GMT 2012  Olly Betts <olly@survex.com>

	* examples/questletor.cc: Fix whitespace irregularities.

Wed May 16 05:38:20 GMT 2012  Olly Betts <olly@survex.com>

	* .gitignore: Create.

Wed May 16 05:37:56 GMT 2012  Olly Betts <olly@survex.com>

	* configure.ac,examples/Makefile.mk,makemanpage.in: Get xapian-letor
	  module to build.

Wed May 16 05:22:28 GMT 2012  Olly Betts <olly@survex.com>

	* Makefile.am,letor_internal.cc: Need unistd.h for getcwd().

Wed May 16 04:45:33 GMT 2012  Olly Betts <olly@survex.com>

	* docs/letor.rst: Drop discussion of pre-requisites as INSTALL now
	  covers this.
